--- a/AspUploadHandler/AspUploadHandler.csproj
+++ b/AspUploadHandler/AspUploadHandler.csproj
@@ -9,6 +9,12 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore">
+      <Version>1.0.0-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.SwaggerUi">
+      <Version>6.0.0-beta902</Version>
+    </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.3.0</Version>
     </PackageReference>
